<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutUs">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/logo_reparadora"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Direccion: "
            android:textColor="@color/Cognac"
            android:textSize="15sp"
            android:paddingLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="17sp"
            android:paddingHorizontal="20dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Telefono: "
            android:textColor="@color/Cognac"
            android:textSize="15sp"
            android:paddingLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/local_phone"
            android:textSize="17sp"
            android:paddingHorizontal="20dp"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_1"
            android:textSize="18sp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_2"
            android:textSize="18sp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_3"
            android:textSize="18sp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"/>

    </LinearLayout>

</ScrollView>